course/y.output
State 52 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: SHEBANG list

    2 list: nl_opt
    3     | nl_opt stmt_seq
    4     | nl_opt stmt_seq separator

    5 stmt_seq: and_or
    6         | stmt_seq separator and_or

    7 separator: SEMI nl_opt
    8          | AMP nl_opt
    9          | NL nl_opt

   10 nl_opt: ε
   11       | nl_opt NL

   12 and_or: pipeline
   13       | and_or AND nl_opt pipeline
   14       | and_or OR nl_opt pipeline

   15 pipeline: command
   16         | pipeline PIPE nl_opt command

   17 command: simple_command
   18        | assignment
   19        | test_command
   20        | if_clause
   21        | while_clause
   22        | until_clause
   23        | for_clause
   24        | case_clause
   25        | function_def
   26        | local_stmt

   27 assignment: ASSIGN
   28           | ASSIGN word

   29 simple_command: cmd_name arg_list redir_list

   30 cmd_name: ID
   31         | WORD

   32 arg_list: ε
   33         | arg_list arg

   34 arg: word
   35    | ASSIGN

   36 word: ID
   37     | WORD
   38     | STRING
   39     | expansion

   40 expansion: DOLLAR_ID
   41          | DOLLAR_NUM
   42          | DOLLAR_SPECIAL
   43          | DOLLAR_BRACE
   44          | cmdsubst

   45 cmdsubst: DOLLAR_LPAREN list RPAREN

   46 redir_list: ε
   47           | redir_list redir

   48 redir: GT redir_target
   49      | DGREAT redir_target
   50      | LT redir_target
   51      | REDIR_ERR redir_target
   52      | REDIR_ERR_OUT

   53 redir_target: ID
   54             | WORD

   55 test_command: LBRACK arg_list RBRACK

   56 if_clause: IF test_command sep THEN list FI
   57          | IF test_command sep THEN list elif_parts FI
   58          | IF test_command sep THEN list ELSE list FI
   59          | IF test_command sep THEN list elif_parts ELSE list FI

   60 elif_parts: ELIF test_command sep THEN list
   61           | elif_parts ELIF test_command sep THEN list

   62 while_clause: WHILE test_command sep DO list DONE

   63 until_clause: UNTIL test_command sep DO list DONE

   64 for_clause: FOR ID IN arg_list sep DO list DONE

   65 sep: SEMI nl_opt
   66    | NL nl_opt

   67 case_clause: CASE arg IN nl_opt case_items ESAC

   68 case_items: ε
   69           | case_items case_item

   70 case_item: patterns RPAREN list DSEMI nl_opt

   71 patterns: pattern
   72         | patterns PIPE pattern

   73 pattern: ID
   74        | WORD
   75        | STRING

   76 function_def: ID LPAREN RPAREN nl_opt brace_group
   77             | FUNCTION ID nl_opt brace_group
   78             | FUNCTION ID LPAREN RPAREN nl_opt brace_group

   79 brace_group: LBRACE nl_opt RBRACE
   80            | LBRACE nl_opt stmt_seq separator RBRACE

   81 local_stmt: LOCAL local_names

   82 local_names: local_item
   83            | local_names local_item

   84 local_item: ID
   85           | ASSIGN
   86           | ASSIGN word


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SHEBANG (258) 1
    IF (259) 56 57 58 59
    THEN (260) 56 57 58 59 60 61
    ELIF (261) 60 61
    ELSE (262) 58 59
    FI (263) 56 57 58 59
    WHILE (264) 62
    UNTIL (265) 63
    DO (266) 62 63 64
    DONE (267) 62 63 64
    FOR (268) 64
    IN (269) 64 67
    CASE (270) 67
    ESAC (271) 67
    FUNCTION (272) 77 78
    LOCAL (273) 81
    ID (274) 30 36 53 64 73 76 77 78 84
    WORD (275) 31 37 54 74
    STRING (276) 38 75
    ASSIGN (277) 27 28 35 85 86
    DOLLAR_ID (278) 40
    DOLLAR_NUM (279) 41
    DOLLAR_SPECIAL (280) 42
    DOLLAR_BRACE (281) 43
    DOLLAR_LPAREN (282) 45
    LBRACK (283) 55
    RBRACK (284) 55
    LBRACE (285) 79 80
    RBRACE (286) 79 80
    LPAREN (287) 76 78
    RPAREN (288) 45 70 76 78
    PIPE (289) 16 72
    AND (290) 13
    OR (291) 14
    AMP (292) 8
    SEMI (293) 7 65
    DSEMI (294) 70
    NL (295) 9 11 66
    LT (296) 50
    GT (297) 48
    DGREAT (298) 49
    REDIR_ERR (299) 51
    REDIR_ERR_OUT (300) 52


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program (47)
        on left: 1
        on right: 0
    list (48)
        on left: 2 3 4
        on right: 1 45 56 57 58 59 60 61 62 63 64 70
    stmt_seq (49)
        on left: 5 6
        on right: 3 4 6 80
    separator (50)
        on left: 7 8 9
        on right: 4 6 80
    nl_opt (51)
        on left: 10 11
        on right: 2 3 4 7 8 9 11 13 14 16 65 66 67 70 76 77 78 79 80
    and_or (52)
        on left: 12 13 14
        on right: 5 6 13 14
    pipeline (53)
        on left: 15 16
        on right: 12 13 14 16
    command (54)
        on left: 17 18 19 20 21 22 23 24 25 26
        on right: 15 16
    assignment (55)
        on left: 27 28
        on right: 18
    simple_command (56)
        on left: 29
        on right: 17
    cmd_name (57)
        on left: 30 31
        on right: 29
    arg_list (58)
        on left: 32 33
        on right: 29 33 55 64
    arg (59)
        on left: 34 35
        on right: 33 67
    word (60)
        on left: 36 37 38 39
        on right: 28 34 86
    expansion (61)
        on left: 40 41 42 43 44
        on right: 39
    cmdsubst (62)
        on left: 45
        on right: 44
    redir_list (63)
        on left: 46 47
        on right: 29 47
    redir (64)
        on left: 48 49 50 51 52
        on right: 47
    redir_target (65)
        on left: 53 54
        on right: 48 49 50 51
    test_command (66)
        on left: 55
        on right: 19 56 57 58 59 60 61 62 63
    if_clause (67)
        on left: 56 57 58 59
        on right: 20
    elif_parts (68)
        on left: 60 61
        on right: 57 59 61
    while_clause (69)
        on left: 62
        on right: 21
    until_clause (70)
        on left: 63
        on right: 22
    for_clause (71)
        on left: 64
        on right: 23
    sep (72)
        on left: 65 66
        on right: 56 57 58 59 60 61 62 63 64
    case_clause (73)
        on left: 67
        on right: 24
    case_items (74)
        on left: 68 69
        on right: 67 69
    case_item (75)
        on left: 70
        on right: 69
    patterns (76)
        on left: 71 72
        on right: 70 72
    pattern (77)
        on left: 73 74 75
        on right: 71 72
    function_def (78)
        on left: 76 77 78
        on right: 25
    brace_group (79)
        on left: 79 80
        on right: 76 77 78
    local_stmt (80)
        on left: 81
        on right: 26
    local_names (81)
        on left: 82 83
        on right: 81 83
    local_item (82)
        on left: 84 85 86
        on right: 82 83


State 0

    0 $accept: • program $end

    SHEBANG  shift, and go to state 1

    program  go to state 2


State 1

    1 program: SHEBANG • list

    $default  reduce using rule 10 (nl_opt)

    list    go to state 3
    nl_opt  go to state 4


State 2

    0 $accept: program • $end

    $end  shift, and go to state 5


State 3

    1 program: SHEBANG list •

    $default  reduce using rule 1 (program)


State 4

    2 list: nl_opt •
    3     | nl_opt • stmt_seq
    4     | nl_opt • stmt_seq separator
   11 nl_opt: nl_opt • NL

    IF        shift, and go to state 6
    WHILE     shift, and go to state 7
    UNTIL     shift, and go to state 8
    FOR       shift, and go to state 9
    CASE      shift, and go to state 10
    FUNCTION  shift, and go to state 11
    LOCAL     shift, and go to state 12
    ID        shift, and go to state 13
    WORD      shift, and go to state 14
    ASSIGN    shift, and go to state 15
    LBRACK    shift, and go to state 16
    NL        shift, and go to state 17

    $default  reduce using rule 2 (list)

    stmt_seq        go to state 18
    and_or          go to state 19
    pipeline        go to state 20
    command         go to state 21
    assignment      go to state 22
    simple_command  go to state 23
    cmd_name        go to state 24
    test_command    go to state 25
    if_clause       go to state 26
    while_clause    go to state 27
    until_clause    go to state 28
    for_clause      go to state 29
    case_clause     go to state 30
    function_def    go to state 31
    local_stmt      go to state 32


State 5

    0 $accept: program $end •

    $default  accept


State 6

   56 if_clause: IF • test_command sep THEN list FI
   57          | IF • test_command sep THEN list elif_parts FI
   58          | IF • test_command sep THEN list ELSE list FI
   59          | IF • test_command sep THEN list elif_parts ELSE list FI

    LBRACK  shift, and go to state 16

    test_command  go to state 33


State 7

   62 while_clause: WHILE • test_command sep DO list DONE

    LBRACK  shift, and go to state 16

    test_command  go to state 34


State 8

   63 until_clause: UNTIL • test_command sep DO list DONE

    LBRACK  shift, and go to state 16

    test_command  go to state 35


State 9

   64 for_clause: FOR • ID IN arg_list sep DO list DONE

    ID  shift, and go to state 36


State 10

   67 case_clause: CASE • arg IN nl_opt case_items ESAC

    ID              shift, and go to state 37
    WORD            shift, and go to state 38
    STRING          shift, and go to state 39
    ASSIGN          shift, and go to state 40
    DOLLAR_ID       shift, and go to state 41
    DOLLAR_NUM      shift, and go to state 42
    DOLLAR_SPECIAL  shift, and go to state 43
    DOLLAR_BRACE    shift, and go to state 44
    DOLLAR_LPAREN   shift, and go to state 45

    arg        go to state 46
    word       go to state 47
    expansion  go to state 48
    cmdsubst   go to state 49


State 11

   77 function_def: FUNCTION • ID nl_opt brace_group
   78             | FUNCTION • ID LPAREN RPAREN nl_opt brace_group

    ID  shift, and go to state 50


State 12

   81 local_stmt: LOCAL • local_names

    ID      shift, and go to state 51
    ASSIGN  shift, and go to state 52

    local_names  go to state 53
    local_item   go to state 54


State 13

   30 cmd_name: ID •
   76 function_def: ID • LPAREN RPAREN nl_opt brace_group

    LPAREN  shift, and go to state 55

    $default  reduce using rule 30 (cmd_name)


State 14

   31 cmd_name: WORD •

    $default  reduce using rule 31 (cmd_name)


State 15

   27 assignment: ASSIGN •
   28           | ASSIGN • word

    ID              shift, and go to state 37
    WORD            shift, and go to state 38
    STRING          shift, and go to state 39
    DOLLAR_ID       shift, and go to state 41
    DOLLAR_NUM      shift, and go to state 42
    DOLLAR_SPECIAL  shift, and go to state 43
    DOLLAR_BRACE    shift, and go to state 44
    DOLLAR_LPAREN   shift, and go to state 45

    $default  reduce using rule 27 (assignment)

    word       go to state 56
    expansion  go to state 48
    cmdsubst   go to state 49


State 16

   55 test_command: LBRACK • arg_list RBRACK

    $default  reduce using rule 32 (arg_list)

    arg_list  go to state 57


State 17

   11 nl_opt: nl_opt NL •

    $default  reduce using rule 11 (nl_opt)


State 18

    3 list: nl_opt stmt_seq •
    4     | nl_opt stmt_seq • separator
    6 stmt_seq: stmt_seq • separator and_or

    AMP   shift, and go to state 58
    SEMI  shift, and go to state 59
    NL    shift, and go to state 60

    $default  reduce using rule 3 (list)

    separator  go to state 61


State 19

    5 stmt_seq: and_or •
   13 and_or: and_or • AND nl_opt pipeline
   14       | and_or • OR nl_opt pipeline

    AND  shift, and go to state 62
    OR   shift, and go to state 63

    $default  reduce using rule 5 (stmt_seq)


State 20

   12 and_or: pipeline •
   16 pipeline: pipeline • PIPE nl_opt command

    PIPE  shift, and go to state 64

    $default  reduce using rule 12 (and_or)


State 21

   15 pipeline: command •

    $default  reduce using rule 15 (pipeline)


State 22

   18 command: assignment •

    $default  reduce using rule 18 (command)


State 23

   17 command: simple_command •

    $default  reduce using rule 17 (command)


State 24

   29 simple_command: cmd_name • arg_list redir_list

    $default  reduce using rule 32 (arg_list)

    arg_list  go to state 65


State 25

   19 command: test_command •

    $default  reduce using rule 19 (command)


State 26

   20 command: if_clause •

    $default  reduce using rule 20 (command)


State 27

   21 command: while_clause •

    $default  reduce using rule 21 (command)


State 28

   22 command: until_clause •

    $default  reduce using rule 22 (command)


State 29

   23 command: for_clause •

    $default  reduce using rule 23 (command)


State 30

   24 command: case_clause •

    $default  reduce using rule 24 (command)


State 31

   25 command: function_def •

    $default  reduce using rule 25 (command)


State 32

   26 command: local_stmt •

    $default  reduce using rule 26 (command)


State 33

   56 if_clause: IF test_command • sep THEN list FI
   57          | IF test_command • sep THEN list elif_parts FI
   58          | IF test_command • sep THEN list ELSE list FI
   59          | IF test_command • sep THEN list elif_parts ELSE list FI

    SEMI  shift, and go to state 66
    NL    shift, and go to state 67

    sep  go to state 68


State 34

   62 while_clause: WHILE test_command • sep DO list DONE

    SEMI  shift, and go to state 66
    NL    shift, and go to state 67

    sep  go to state 69


State 35

   63 until_clause: UNTIL test_command • sep DO list DONE

    SEMI  shift, and go to state 66
    NL    shift, and go to state 67

    sep  go to state 70


State 36

   64 for_clause: FOR ID • IN arg_list sep DO list DONE

    IN  shift, and go to state 71


State 37

   36 word: ID •

    $default  reduce using rule 36 (word)


State 38

   37 word: WORD •

    $default  reduce using rule 37 (word)


State 39

   38 word: STRING •

    $default  reduce using rule 38 (word)


State 40

   35 arg: ASSIGN •

    $default  reduce using rule 35 (arg)


State 41

   40 expansion: DOLLAR_ID •

    $default  reduce using rule 40 (expansion)


State 42

   41 expansion: DOLLAR_NUM •

    $default  reduce using rule 41 (expansion)


State 43

   42 expansion: DOLLAR_SPECIAL •

    $default  reduce using rule 42 (expansion)


State 44

   43 expansion: DOLLAR_BRACE •

    $default  reduce using rule 43 (expansion)


State 45

   45 cmdsubst: DOLLAR_LPAREN • list RPAREN

    $default  reduce using rule 10 (nl_opt)

    list    go to state 72
    nl_opt  go to state 4


State 46

   67 case_clause: CASE arg • IN nl_opt case_items ESAC

    IN  shift, and go to state 73


State 47

   34 arg: word •

    $default  reduce using rule 34 (arg)


State 48

   39 word: expansion •

    $default  reduce using rule 39 (word)


State 49

   44 expansion: cmdsubst •

    $default  reduce using rule 44 (expansion)


State 50

   77 function_def: FUNCTION ID • nl_opt brace_group
   78             | FUNCTION ID • LPAREN RPAREN nl_opt brace_group

    LPAREN  shift, and go to state 74

    $default  reduce using rule 10 (nl_opt)

    nl_opt  go to state 75


State 51

   84 local_item: ID •

    $default  reduce using rule 84 (local_item)


State 52

   85 local_item: ASSIGN •
   86           | ASSIGN • word

    ID              shift, and go to state 37
    WORD            shift, and go to state 38
    STRING          shift, and go to state 39
    DOLLAR_ID       shift, and go to state 41
    DOLLAR_NUM      shift, and go to state 42
    DOLLAR_SPECIAL  shift, and go to state 43
    DOLLAR_BRACE    shift, and go to state 44
    DOLLAR_LPAREN   shift, and go to state 45

    ID        [reduce using rule 85 (local_item)]
    $default  reduce using rule 85 (local_item)

    word       go to state 76
    expansion  go to state 48
    cmdsubst   go to state 49


State 53

   81 local_stmt: LOCAL local_names •
   83 local_names: local_names • local_item

    ID      shift, and go to state 51
    ASSIGN  shift, and go to state 52

    $default  reduce using rule 81 (local_stmt)

    local_item  go to state 77


State 54

   82 local_names: local_item •

    $default  reduce using rule 82 (local_names)


State 55

   76 function_def: ID LPAREN • RPAREN nl_opt brace_group

    RPAREN  shift, and go to state 78


State 56

   28 assignment: ASSIGN word •

    $default  reduce using rule 28 (assignment)


State 57

   33 arg_list: arg_list • arg
   55 test_command: LBRACK arg_list • RBRACK

    ID              shift, and go to state 37
    WORD            shift, and go to state 38
    STRING          shift, and go to state 39
    ASSIGN          shift, and go to state 40
    DOLLAR_ID       shift, and go to state 41
    DOLLAR_NUM      shift, and go to state 42
    DOLLAR_SPECIAL  shift, and go to state 43
    DOLLAR_BRACE    shift, and go to state 44
    DOLLAR_LPAREN   shift, and go to state 45
    RBRACK          shift, and go to state 79

    arg        go to state 80
    word       go to state 47
    expansion  go to state 48
    cmdsubst   go to state 49


State 58

    8 separator: AMP • nl_opt

    $default  reduce using rule 10 (nl_opt)

    nl_opt  go to state 81


State 59

    7 separator: SEMI • nl_opt

    $default  reduce using rule 10 (nl_opt)

    nl_opt  go to state 82


State 60

    9 separator: NL • nl_opt

    $default  reduce using rule 10 (nl_opt)

    nl_opt  go to state 83


State 61

    4 list: nl_opt stmt_seq separator •
    6 stmt_seq: stmt_seq separator • and_or

    IF        shift, and go to state 6
    WHILE     shift, and go to state 7
    UNTIL     shift, and go to state 8
    FOR       shift, and go to state 9
    CASE      shift, and go to state 10
    FUNCTION  shift, and go to state 11
    LOCAL     shift, and go to state 12
    ID        shift, and go to state 13
    WORD      shift, and go to state 14
    ASSIGN    shift, and go to state 15
    LBRACK    shift, and go to state 16

    $default  reduce using rule 4 (list)

    and_or          go to state 84
    pipeline        go to state 20
    command         go to state 21
    assignment      go to state 22
    simple_command  go to state 23
    cmd_name        go to state 24
    test_command    go to state 25
    if_clause       go to state 26
    while_clause    go to state 27
    until_clause    go to state 28
    for_clause      go to state 29
    case_clause     go to state 30
    function_def    go to state 31
    local_stmt      go to state 32


State 62

   13 and_or: and_or AND • nl_opt pipeline

    $default  reduce using rule 10 (nl_opt)

    nl_opt  go to state 85


State 63

   14 and_or: and_or OR • nl_opt pipeline

    $default  reduce using rule 10 (nl_opt)

    nl_opt  go to state 86


State 64

   16 pipeline: pipeline PIPE • nl_opt command

    $default  reduce using rule 10 (nl_opt)

    nl_opt  go to state 87


State 65

   29 simple_command: cmd_name arg_list • redir_list
   33 arg_list: arg_list • arg

    ID              shift, and go to state 37
    WORD            shift, and go to state 38
    STRING          shift, and go to state 39
    ASSIGN          shift, and go to state 40
    DOLLAR_ID       shift, and go to state 41
    DOLLAR_NUM      shift, and go to state 42
    DOLLAR_SPECIAL  shift, and go to state 43
    DOLLAR_BRACE    shift, and go to state 44
    DOLLAR_LPAREN   shift, and go to state 45

    $default  reduce using rule 46 (redir_list)

    arg         go to state 80
    word        go to state 47
    expansion   go to state 48
    cmdsubst    go to state 49
    redir_list  go to state 88


State 66

   65 sep: SEMI • nl_opt

    $default  reduce using rule 10 (nl_opt)

    nl_opt  go to state 89


State 67

   66 sep: NL • nl_opt

    $default  reduce using rule 10 (nl_opt)

    nl_opt  go to state 90


State 68

   56 if_clause: IF test_command sep • THEN list FI
   57          | IF test_command sep • THEN list elif_parts FI
   58          | IF test_command sep • THEN list ELSE list FI
   59          | IF test_command sep • THEN list elif_parts ELSE list FI

    THEN  shift, and go to state 91


State 69

   62 while_clause: WHILE test_command sep • DO list DONE

    DO  shift, and go to state 92


State 70

   63 until_clause: UNTIL test_command sep • DO list DONE

    DO  shift, and go to state 93


State 71

   64 for_clause: FOR ID IN • arg_list sep DO list DONE

    $default  reduce using rule 32 (arg_list)

    arg_list  go to state 94


State 72

   45 cmdsubst: DOLLAR_LPAREN list • RPAREN

    RPAREN  shift, and go to state 95


State 73

   67 case_clause: CASE arg IN • nl_opt case_items ESAC

    $default  reduce using rule 10 (nl_opt)

    nl_opt  go to state 96


State 74

   78 function_def: FUNCTION ID LPAREN • RPAREN nl_opt brace_group

    RPAREN  shift, and go to state 97


State 75

   11 nl_opt: nl_opt • NL
   77 function_def: FUNCTION ID nl_opt • brace_group

    LBRACE  shift, and go to state 98
    NL      shift, and go to state 17

    brace_group  go to state 99


State 76

   86 local_item: ASSIGN word •

    $default  reduce using rule 86 (local_item)


State 77

   83 local_names: local_names local_item •

    $default  reduce using rule 83 (local_names)


State 78

   76 function_def: ID LPAREN RPAREN • nl_opt brace_group

    $default  reduce using rule 10 (nl_opt)

    nl_opt  go to state 100


State 79

   55 test_command: LBRACK arg_list RBRACK •

    $default  reduce using rule 55 (test_command)


State 80

   33 arg_list: arg_list arg •

    $default  reduce using rule 33 (arg_list)


State 81

    8 separator: AMP nl_opt •
   11 nl_opt: nl_opt • NL

    NL  shift, and go to state 17

    $default  reduce using rule 8 (separator)


State 82

    7 separator: SEMI nl_opt •
   11 nl_opt: nl_opt • NL

    NL  shift, and go to state 17

    $default  reduce using rule 7 (separator)


State 83

    9 separator: NL nl_opt •
   11 nl_opt: nl_opt • NL

    NL  shift, and go to state 17

    $default  reduce using rule 9 (separator)


State 84

    6 stmt_seq: stmt_seq separator and_or •
   13 and_or: and_or • AND nl_opt pipeline
   14       | and_or • OR nl_opt pipeline

    AND  shift, and go to state 62
    OR   shift, and go to state 63

    $default  reduce using rule 6 (stmt_seq)


State 85

   11 nl_opt: nl_opt • NL
   13 and_or: and_or AND nl_opt • pipeline

    IF        shift, and go to state 6
    WHILE     shift, and go to state 7
    UNTIL     shift, and go to state 8
    FOR       shift, and go to state 9
    CASE      shift, and go to state 10
    FUNCTION  shift, and go to state 11
    LOCAL     shift, and go to state 12
    ID        shift, and go to state 13
    WORD      shift, and go to state 14
    ASSIGN    shift, and go to state 15
    LBRACK    shift, and go to state 16
    NL        shift, and go to state 17

    pipeline        go to state 101
    command         go to state 21
    assignment      go to state 22
    simple_command  go to state 23
    cmd_name        go to state 24
    test_command    go to state 25
    if_clause       go to state 26
    while_clause    go to state 27
    until_clause    go to state 28
    for_clause      go to state 29
    case_clause     go to state 30
    function_def    go to state 31
    local_stmt      go to state 32


State 86

   11 nl_opt: nl_opt • NL
   14 and_or: and_or OR nl_opt • pipeline

    IF        shift, and go to state 6
    WHILE     shift, and go to state 7
    UNTIL     shift, and go to state 8
    FOR       shift, and go to state 9
    CASE      shift, and go to state 10
    FUNCTION  shift, and go to state 11
    LOCAL     shift, and go to state 12
    ID        shift, and go to state 13
    WORD      shift, and go to state 14
    ASSIGN    shift, and go to state 15
    LBRACK    shift, and go to state 16
    NL        shift, and go to state 17

    pipeline        go to state 102
    command         go to state 21
    assignment      go to state 22
    simple_command  go to state 23
    cmd_name        go to state 24
    test_command    go to state 25
    if_clause       go to state 26
    while_clause    go to state 27
    until_clause    go to state 28
    for_clause      go to state 29
    case_clause     go to state 30
    function_def    go to state 31
    local_stmt      go to state 32


State 87

   11 nl_opt: nl_opt • NL
   16 pipeline: pipeline PIPE nl_opt • command

    IF        shift, and go to state 6
    WHILE     shift, and go to state 7
    UNTIL     shift, and go to state 8
    FOR       shift, and go to state 9
    CASE      shift, and go to state 10
    FUNCTION  shift, and go to state 11
    LOCAL     shift, and go to state 12
    ID        shift, and go to state 13
    WORD      shift, and go to state 14
    ASSIGN    shift, and go to state 15
    LBRACK    shift, and go to state 16
    NL        shift, and go to state 17

    command         go to state 103
    assignment      go to state 22
    simple_command  go to state 23
    cmd_name        go to state 24
    test_command    go to state 25
    if_clause       go to state 26
    while_clause    go to state 27
    until_clause    go to state 28
    for_clause      go to state 29
    case_clause     go to state 30
    function_def    go to state 31
    local_stmt      go to state 32


State 88

   29 simple_command: cmd_name arg_list redir_list •
   47 redir_list: redir_list • redir

    LT             shift, and go to state 104
    GT             shift, and go to state 105
    DGREAT         shift, and go to state 106
    REDIR_ERR      shift, and go to state 107
    REDIR_ERR_OUT  shift, and go to state 108

    $default  reduce using rule 29 (simple_command)

    redir  go to state 109


State 89

   11 nl_opt: nl_opt • NL
   65 sep: SEMI nl_opt •

    NL  shift, and go to state 17

    $default  reduce using rule 65 (sep)


State 90

   11 nl_opt: nl_opt • NL
   66 sep: NL nl_opt •

    NL  shift, and go to state 17

    $default  reduce using rule 66 (sep)


State 91

   56 if_clause: IF test_command sep THEN • list FI
   57          | IF test_command sep THEN • list elif_parts FI
   58          | IF test_command sep THEN • list ELSE list FI
   59          | IF test_command sep THEN • list elif_parts ELSE list FI

    $default  reduce using rule 10 (nl_opt)

    list    go to state 110
    nl_opt  go to state 4


State 92

   62 while_clause: WHILE test_command sep DO • list DONE

    $default  reduce using rule 10 (nl_opt)

    list    go to state 111
    nl_opt  go to state 4


State 93

   63 until_clause: UNTIL test_command sep DO • list DONE

    $default  reduce using rule 10 (nl_opt)

    list    go to state 112
    nl_opt  go to state 4


State 94

   33 arg_list: arg_list • arg
   64 for_clause: FOR ID IN arg_list • sep DO list DONE

    ID              shift, and go to state 37
    WORD            shift, and go to state 38
    STRING          shift, and go to state 39
    ASSIGN          shift, and go to state 40
    DOLLAR_ID       shift, and go to state 41
    DOLLAR_NUM      shift, and go to state 42
    DOLLAR_SPECIAL  shift, and go to state 43
    DOLLAR_BRACE    shift, and go to state 44
    DOLLAR_LPAREN   shift, and go to state 45
    SEMI            shift, and go to state 66
    NL              shift, and go to state 67

    arg        go to state 80
    word       go to state 47
    expansion  go to state 48
    cmdsubst   go to state 49
    sep        go to state 113


State 95

   45 cmdsubst: DOLLAR_LPAREN list RPAREN •

    $default  reduce using rule 45 (cmdsubst)


State 96

   11 nl_opt: nl_opt • NL
   67 case_clause: CASE arg IN nl_opt • case_items ESAC

    NL  shift, and go to state 17

    $default  reduce using rule 68 (case_items)

    case_items  go to state 114


State 97

   78 function_def: FUNCTION ID LPAREN RPAREN • nl_opt brace_group

    $default  reduce using rule 10 (nl_opt)

    nl_opt  go to state 115


State 98

   79 brace_group: LBRACE • nl_opt RBRACE
   80            | LBRACE • nl_opt stmt_seq separator RBRACE

    $default  reduce using rule 10 (nl_opt)

    nl_opt  go to state 116


State 99

   77 function_def: FUNCTION ID nl_opt brace_group •

    $default  reduce using rule 77 (function_def)


State 100

   11 nl_opt: nl_opt • NL
   76 function_def: ID LPAREN RPAREN nl_opt • brace_group

    LBRACE  shift, and go to state 98
    NL      shift, and go to state 17

    brace_group  go to state 117


State 101

   13 and_or: and_or AND nl_opt pipeline •
   16 pipeline: pipeline • PIPE nl_opt command

    PIPE  shift, and go to state 64

    $default  reduce using rule 13 (and_or)


State 102

   14 and_or: and_or OR nl_opt pipeline •
   16 pipeline: pipeline • PIPE nl_opt command

    PIPE  shift, and go to state 64

    $default  reduce using rule 14 (and_or)


State 103

   16 pipeline: pipeline PIPE nl_opt command •

    $default  reduce using rule 16 (pipeline)


State 104

   50 redir: LT • redir_target

    ID    shift, and go to state 118
    WORD  shift, and go to state 119

    redir_target  go to state 120


State 105

   48 redir: GT • redir_target

    ID    shift, and go to state 118
    WORD  shift, and go to state 119

    redir_target  go to state 121


State 106

   49 redir: DGREAT • redir_target

    ID    shift, and go to state 118
    WORD  shift, and go to state 119

    redir_target  go to state 122


State 107

   51 redir: REDIR_ERR • redir_target

    ID    shift, and go to state 118
    WORD  shift, and go to state 119

    redir_target  go to state 123


State 108

   52 redir: REDIR_ERR_OUT •

    $default  reduce using rule 52 (redir)


State 109

   47 redir_list: redir_list redir •

    $default  reduce using rule 47 (redir_list)


State 110

   56 if_clause: IF test_command sep THEN list • FI
   57          | IF test_command sep THEN list • elif_parts FI
   58          | IF test_command sep THEN list • ELSE list FI
   59          | IF test_command sep THEN list • elif_parts ELSE list FI

    ELIF  shift, and go to state 124
    ELSE  shift, and go to state 125
    FI    shift, and go to state 126

    elif_parts  go to state 127


State 111

   62 while_clause: WHILE test_command sep DO list • DONE

    DONE  shift, and go to state 128


State 112

   63 until_clause: UNTIL test_command sep DO list • DONE

    DONE  shift, and go to state 129


State 113

   64 for_clause: FOR ID IN arg_list sep • DO list DONE

    DO  shift, and go to state 130


State 114

   67 case_clause: CASE arg IN nl_opt case_items • ESAC
   69 case_items: case_items • case_item

    ESAC    shift, and go to state 131
    ID      shift, and go to state 132
    WORD    shift, and go to state 133
    STRING  shift, and go to state 134

    case_item  go to state 135
    patterns   go to state 136
    pattern    go to state 137


State 115

   11 nl_opt: nl_opt • NL
   78 function_def: FUNCTION ID LPAREN RPAREN nl_opt • brace_group

    LBRACE  shift, and go to state 98
    NL      shift, and go to state 17

    brace_group  go to state 138


State 116

   11 nl_opt: nl_opt • NL
   79 brace_group: LBRACE nl_opt • RBRACE
   80            | LBRACE nl_opt • stmt_seq separator RBRACE

    IF        shift, and go to state 6
    WHILE     shift, and go to state 7
    UNTIL     shift, and go to state 8
    FOR       shift, and go to state 9
    CASE      shift, and go to state 10
    FUNCTION  shift, and go to state 11
    LOCAL     shift, and go to state 12
    ID        shift, and go to state 13
    WORD      shift, and go to state 14
    ASSIGN    shift, and go to state 15
    LBRACK    shift, and go to state 16
    RBRACE    shift, and go to state 139
    NL        shift, and go to state 17

    stmt_seq        go to state 140
    and_or          go to state 19
    pipeline        go to state 20
    command         go to state 21
    assignment      go to state 22
    simple_command  go to state 23
    cmd_name        go to state 24
    test_command    go to state 25
    if_clause       go to state 26
    while_clause    go to state 27
    until_clause    go to state 28
    for_clause      go to state 29
    case_clause     go to state 30
    function_def    go to state 31
    local_stmt      go to state 32


State 117

   76 function_def: ID LPAREN RPAREN nl_opt brace_group •

    $default  reduce using rule 76 (function_def)


State 118

   53 redir_target: ID •

    $default  reduce using rule 53 (redir_target)


State 119

   54 redir_target: WORD •

    $default  reduce using rule 54 (redir_target)


State 120

   50 redir: LT redir_target •

    $default  reduce using rule 50 (redir)


State 121

   48 redir: GT redir_target •

    $default  reduce using rule 48 (redir)


State 122

   49 redir: DGREAT redir_target •

    $default  reduce using rule 49 (redir)


State 123

   51 redir: REDIR_ERR redir_target •

    $default  reduce using rule 51 (redir)


State 124

   60 elif_parts: ELIF • test_command sep THEN list

    LBRACK  shift, and go to state 16

    test_command  go to state 141


State 125

   58 if_clause: IF test_command sep THEN list ELSE • list FI

    $default  reduce using rule 10 (nl_opt)

    list    go to state 142
    nl_opt  go to state 4


State 126

   56 if_clause: IF test_command sep THEN list FI •

    $default  reduce using rule 56 (if_clause)


State 127

   57 if_clause: IF test_command sep THEN list elif_parts • FI
   59          | IF test_command sep THEN list elif_parts • ELSE list FI
   61 elif_parts: elif_parts • ELIF test_command sep THEN list

    ELIF  shift, and go to state 143
    ELSE  shift, and go to state 144
    FI    shift, and go to state 145


State 128

   62 while_clause: WHILE test_command sep DO list DONE •

    $default  reduce using rule 62 (while_clause)


State 129

   63 until_clause: UNTIL test_command sep DO list DONE •

    $default  reduce using rule 63 (until_clause)


State 130

   64 for_clause: FOR ID IN arg_list sep DO • list DONE

    $default  reduce using rule 10 (nl_opt)

    list    go to state 146
    nl_opt  go to state 4


State 131

   67 case_clause: CASE arg IN nl_opt case_items ESAC •

    $default  reduce using rule 67 (case_clause)


State 132

   73 pattern: ID •

    $default  reduce using rule 73 (pattern)


State 133

   74 pattern: WORD •

    $default  reduce using rule 74 (pattern)


State 134

   75 pattern: STRING •

    $default  reduce using rule 75 (pattern)


State 135

   69 case_items: case_items case_item •

    $default  reduce using rule 69 (case_items)


State 136

   70 case_item: patterns • RPAREN list DSEMI nl_opt
   72 patterns: patterns • PIPE pattern
